.metals/.reports/metals/r_scala-toplevel-mtags_1691850744955
id: file://<WORKSPACE>/Main.scala:[4..4) in Input.VirtualFile("file://<WORKSPACE>/Main.scala", "def ")
file://<WORKSPACE>/Main.scala:1: error: expected identifier; obtained eof
def 
    ^